--- a/index.html
+++ b/index.html
@@ -10,3 +10,9 @@
         border-radius: 50px;
         cursor:pointer;
     }
+    </style>
+</head>
+<body>
+<button class="btn-1">Click Me</button>
+</body>
+</html>
