--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
 </head>
 <body>
 <button class="btn-1">Click Me</button>
+<button class="btn-2">Click me</button>
+<button class="btn-3">Click me</button>
+<button class="btn-4">Click me</button>
+<button class="btn-5">Click me</button>
+<button class="btn-6">Click me</button>
+<button class="btn-7">Click me</button>
 </body>
 </html>
