--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
         border-radius: 50px;
         cursor:pointer;
     }
+    .btn-2{
+        background-color: green;rgb(234,678,24)
+        border: none;
+        padding: 10px 20px;
+        border-radius: 20px 0px 20px 0px;
+    }
+     .btn-3{
+        background-color: burlywood;rgb(234,678,24)
+        border: none;
+        padding: 10px 20px;
+        border-radius: 20px 0px 50px 10px;
+        cursor:pointer;
+    }
+    .btn-4{
+        background-color: skyblue;rgb(234,678,24)
+        border: none;
+        padding: 10px 20px;
+        border-radius: 10px 0px 10px 0px;
+        cursor:pointer;
+    }
     </style>
 </head>
 <body>
