--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <title>CSS</title>
 <style>
     .btn-1{
-        background-color: red;rgb(203,54,76)
+        background-color:rgb(203,54,76);
         border: none;
         padding: 10px 20px;
         border-radius: 50px;
         cursor:pointer;
     }
     .btn-2{
-        background-color: green;rgb(234,678,24)
+        background-color:rgb(234,678,24);
         border: none;
         padding: 10px 20px;
         border-radius: 20px 0px 20px 0px;
     }
      .btn-3{
-        background-color: burlywood;rgb(234,678,24)
+        background-color:rgb(234,678,24);
         border: none;
         padding: 10px 20px;
         border-radius: 20px 0px 50px 10px;
@@ -25,28 +25,28 @@
     }
 
     .btn-4{
-        background-color: skyblue;rgb(234,678,24)
+        background-color:rgb(234,678,24);
         border: none;
         padding: 10px 20px;
         border-radius: 10px 0px 10px 0px;
         cursor:pointer;
     }
     .btn-5{
-        background-color: rosybrown;rgb(234,678,24)
+        background-color:rgb(234,678,24);
         border: none;
         padding: 10px 20px;
         border-radius: 30px 30px 40px 10px;
         cursor:pointer;
     }
     .btn-6{
-        background-color: teal;rgb(234,678,24)
+        background-color:rgb(234,678,24);
         border: none;
         padding: 10px 20px;
         border-radius: 0px 20px 0px 20px;
         cursor:pointer;
     }
     .btn-7{
-        background-color: plum;rgb(234,678,24)
+        background-color:rgb(234,678,24);
         border: none;
         padding: 10px 20px;
         border-radius: 20px 30px 20px 30px;
