--- a/index.html
+++ b/index.html
@@ -4,53 +4,64 @@
     <title>CSS</title>
 <style>
     .btn-1{
-        background-color:rgb(203,54,76);
+        background-color:rgba(54, 203, 56, 0.267);
         border: none;
         padding: 10px 20px;
         border-radius: 50px;
         cursor:pointer;
+        box-shadow: 2px 2px 2px gray;
+        
     }
+     
     .btn-2{
-        background-color:rgb(234,678,24);
+        background-color:orchid;
         border: none;
         padding: 10px 20px;
         border-radius: 20px 0px 20px 0px;
+        box-shadow: 2px 2px 2px gray;
     }
      .btn-3{
-        background-color:rgb(234,678,24);
+        background-color:rgba(175, 238, 238, 0.349);
         border: none;
         padding: 10px 20px;
         border-radius: 20px 0px 50px 10px;
         cursor:pointer;
+         box-shadow: 2px 2px 2px gray;
     }
 
     .btn-4{
-        background-color:rgb(234,678,24);
+        background-color:pink;
         border: none;
         padding: 10px 20px;
         border-radius: 10px 0px 10px 0px;
         cursor:pointer;
+         box-shadow: 2px 2px 2px gray;
     }
     .btn-5{
-        background-color:rgb(234,678,24);
+        background-color:brown;
         border: none;
         padding: 10px 20px;
         border-radius: 30px 30px 40px 10px;
         cursor:pointer;
+        box-shadow: 2px 2px 2px gray;
+        color: aliceblue;
     }
     .btn-6{
-        background-color:rgb(234,678,24);
+        background-color:rgba(76, 0, 130, 0.844);
         border: none;
         padding: 10px 20px;
         border-radius: 0px 20px 0px 20px;
         cursor:pointer;
+        box-shadow: 2px 2px 2px gray;
+        color: aliceblue;
     }
     .btn-7{
-        background-color:rgb(234,678,24);
+        background-color: rgba(0, 255, 255, 0.878);
         border: none;
         padding: 10px 20px;
         border-radius: 20px 30px 20px 30px;
         cursor:pointer;
+        box-shadow: 2px 2px 2px gray;
     }
     </style>
 </head>
